docs: update project status and codebase index, config: memory and agent improvements, env: cleanup

--- a/env.example
+++ b/env.example
@@ -11,55 +11,20 @@ KICKAI_INVITE_SECRET_KEY=your_secure_random_secret_key_here_minimum_32_character
 # ============================================================================
 # FIREBASE CONFIGURATION
 # ============================================================================
-# Path to your Firebase service account credentials file
-FIREBASE_CREDENTIALS_FILE=credentials/firebase_credentials_testing.json
-
-# Firebase project ID
+# Firebase project ID (REQUIRED)
 FIREBASE_PROJECT_ID=your-firebase-project-id
 
-# ============================================================================
-# TELEGRAM BOT CONFIGURATION
-# ============================================================================
-# Bot token from @BotFather
-TELEGRAM_BOT_TOKEN=your_bot_token_here
+# Firebase credentials - choose ONE method:
+# Option 1: Path to Firebase service account credentials file
+FIREBASE_CREDENTIALS_FILE=credentials/firebase_credentials_testing.json
 
-# Main chat ID (where players interact)
-TELEGRAM_MAIN_CHAT_ID=-1001234567890
-
-# Leadership chat ID (where admins manage the team)
-TELEGRAM_LEADERSHIP_CHAT_ID=-1001234567891
+# Option 2: Firebase credentials as JSON string (alternative to file)
+# FIREBASE_CREDENTIALS_JSON={"type":"service_account","project_id":"your-project","private_key":"...","client_email":"..."}
 
 # ============================================================================
-# TEAM CONFIGURATION
+# AI/LLM CONFIGURATION
 # ============================================================================
-# Default team ID (used for testing)
-TEAM_ID=KTI
-
-# ============================================================================
-# LOGGING CONFIGURATION
-# ============================================================================
-# Log level (DEBUG, INFO, WARNING, ERROR)
-LOG_LEVEL=INFO
-
-# ============================================================================
-# DEVELOPMENT SETTINGS
-# ============================================================================
-# Set to 'true' for development mode
-DEVELOPMENT_MODE=true
-
-# Skip full system validation during startup (for faster development)
-SKIP_FULL_SYSTEM_VALIDATION=false
-
-# ============================================================================
-# E2E TESTING CONFIGURATION
-# ============================================================================
-# Admin session string for E2E testing
-ADMIN_SESSION_STRING=your_admin_session_string_here
-
-# ============================================================================
-# LLM CONFIGURATION
-# ============================================================================
-# AI provider (gemini, ollama, openai, mock)
+# AI provider (gemini, ollama, openai, mock, huggingface)
 AI_PROVIDER=gemini
 
 # AI model name
@@ -70,6 +35,9 @@ GOOGLE_API_KEY=your_google_api_key_here
 
 # OpenAI API key (if using OpenAI)
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Hugging Face API token (REQUIRED for Hugging Face models and embeddings)
+HUGGINGFACE_API_TOKEN=your_huggingface_api_token_here
 
 # Ollama model name (if using Ollama)
 OLLAMA_MODEL=llama3.2:3b
@@ -84,61 +52,81 @@ AI_TIMEOUT=120
 AI_MAX_RETRIES=5
 
 # ============================================================================
-# PERFORMANCE SETTINGS
+# CREWAI MEMORY CONFIGURATION
 # ============================================================================
-# Cache TTL in seconds
-CACHE_TTL=300
+# Enable CrewAI memory system
+CREWAI_MEMORY_ENABLED=true
 
-# Maximum concurrent operations
-MAX_CONCURRENT_OPERATIONS=10
+# CrewAI memory embedding provider (huggingface, google, openai)
+# RECOMMENDED: huggingface - consistent with system's LLM architecture
+CREWAI_MEMORY_PROVIDER=huggingface
+
+# CrewAI memory embedding model (Hugging Face sentence-transformers)
+# RECOMMENDED: sentence-transformers/all-MiniLM-L6-v2 (fast, efficient, 86M+ downloads)
+CREWAI_MEMORY_MODEL=sentence-transformers/all-MiniLM-L6-v2
+
+# Max memory items per crew
+CREWAI_MEMORY_MAX_ITEMS=1000
+
+# ============================================================================
+# PAYMENT CONFIGURATION
+# ============================================================================
+# Collectiv API key (for payment processing)
+COLLECTIV_API_KEY=your_collectiv_api_key_here
+
+# Collectiv base URL
+COLLECTIV_BASE_URL=https://api.collectiv.com
+
+# Collectiv webhook secret
+COLLECTIV_WEBHOOK_SECRET=your_collectiv_webhook_secret_here
+
+# Enable payment system
+PAYMENT_ENABLED=false
+
+# ============================================================================
+# LOGGING CONFIGURATION
+# ============================================================================
+# Log level (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
+
+# Enable debug mode
+DEBUG=true
+
+# Enable verbose logging
+VERBOSE_LOGGING=false
+
+# ============================================================================
+# TESTING CONFIGURATION
+# ============================================================================
+# Admin session string for E2E testing
+ADMIN_SESSION_STRING=your_admin_session_string_here
+
+# Player session string for E2E testing
+PLAYER_SESSION_STRING=your_player_session_string_here
 
 # ============================================================================
 # SECURITY SETTINGS
 # ============================================================================
-# Rate limiting - requests per minute
-RATE_LIMIT_PER_MINUTE=60
+# JWT secret key (REQUIRED)
+JWT_SECRET=your_jwt_secret_key_here
 
 # Session timeout in seconds
 SESSION_TIMEOUT=3600
 
 # ============================================================================
-# MONITORING AND HEALTH CHECKS
+# PERFORMANCE SETTINGS
 # ============================================================================
-# Enable health checks
-ENABLE_HEALTH_CHECKS=true
+# Cache TTL in seconds
+CACHE_TTL=300
 
-# Health check interval in seconds
-HEALTH_CHECK_INTERVAL=300
+# Maximum concurrent requests
+MAX_CONCURRENT_REQUESTS=10
 
-# ============================================================================
-# DEPLOYMENT SETTINGS
-# ============================================================================
-# Environment (local, testing, staging, production)
-ENVIRONMENT=local
+# Request timeout in seconds
+REQUEST_TIMEOUT=30
 
-# Enable debug mode
-DEBUG=true
+# Retry attempts
+RETRY_ATTEMPTS=3
 
-# ============================================================================
-# DATABASE SETTINGS
-# ============================================================================
-# Firestore collection prefix
-FIRESTORE_COLLECTION_PREFIX=kickai_
-
-# Enable database connection pooling
-ENABLE_CONNECTION_POOLING=true
-
-# Connection pool size
-CONNECTION_POOL_SIZE=10
-
-# ============================================================================
-# NOTIFICATION SETTINGS
-# ============================================================================
-# Enable notifications
-ENABLE_NOTIFICATIONS=true
-
-# Notification retry attempts
-NOTIFICATION_RETRY_ATTEMPTS=3
-
-# Notification retry delay in seconds
-NOTIFICATION_RETRY_DELAY=5 
+# Retry delay in seconds
+RETRY_DELAY=1.0 
