--- a/requirements-local.txt
+++ b/requirements-local.txt
@@ -24,4 +24,8 @@ protobuf==5.29.5
 psutil==6.1.0
 
 # E2E Testing dependencies
-telethon==1.34.0 
+telethon==1.34.0
+
+# Quick Test Framework dependencies
+loguru==0.7.2
+PyYAML==6.0.1 
