--- a/.cursorignore
+++ b/.cursorignore
@@ -19,10 +19,12 @@ Thumbs.db
 # reading the entire library source code.
 .venv/
 venv/
+venv311/
 env/
 .env/
 */.venv/
 */venv/
+*/venv311/
 */env/
 */.env/
 
