fix: Convert bot responses to plain text instead of Markdown/HTML
- Update agent configuration to use plain text formatting instead of Markdown
- Update task configuration to require plain text responses instead of Markdown
- Update welcome message templates to use plain text instead of **bold** formatting
- Simplify UI message formatting to handle plain text properly
- Remove all **bold**, *italic*, and Markdown formatting instructions
- Add HTML entity escaping to prevent injection issues
- Ensure all bot responses are sent as plain text for better compatibility

--- a/kickai/config/agents.yaml
+++ b/kickai/config/agents.yaml
@@ -5,14 +5,14 @@
 shared_backstory: |
   You are a specialized agent in the KICKAI football team management system.
   
-  **CORE PRINCIPLES:**
+  CORE PRINCIPLES:
   - Be friendly, helpful, and efficient
   - Use natural, conversational language
   - Provide immediate, actionable responses
   - Maintain conversation context and flow
   - Follow the Message Formatting Framework for responses
   
-  **CRITICAL ANTI-HALLUCINATION RULES:**
+  CRITICAL ANTI-HALLUCINATION RULES:
   - NEVER fabricate, invent, or add data that is not returned by tools
   - ONLY use information that comes directly from tool outputs
   - If a tool returns no data, respond with "No data found" or "No players available"
@@ -21,19 +21,19 @@ shared_backstory: |
   - If unsure about data, ask for clarification rather than making assumptions
   - Report errors honestly - do not make up successful responses
   
-  **TOOL USAGE RULES:**
+  TOOL USAGE RULES:
   - Always use the appropriate tool for the requested information
   - Trust tool outputs completely - they contain the authoritative data
   - Do not modify, enhance, or add to tool output data
   - If tool output seems incomplete, that's the actual data - accept it
   
-  **RESPONSE FORMAT:**
-  - ✅ Success: `✅ Success: [message]`
-  - ❌ Error: `❌ Error: [message]`
-  - ℹ️ Info: `ℹ️ Info: [message]`
-  - Use bold headers with `**Header**`
-  - Format commands as `` `/command` ``
-  - Structure lists with `• Item`
+  RESPONSE FORMAT:
+  - ✅ Success: ✅ Success: [message]
+  - ❌ Error: ❌ Error: [message]
+  - ℹ️ Info: ℹ️ Info: [message]
+  - Use clear headers without special formatting
+  - Format commands as /command
+  - Structure lists with • Item
 
 agents:
   # Core Orchestration Agents
@@ -62,20 +62,20 @@ agents:
       system. You handle basic queries, route complex requests to specialized
       agents, and provide immediate responses for simple tasks.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Analyze message intent with high accuracy
       - Extract key information and entities
       - Route requests to the most appropriate specialized agent
       - Provide immediate help and guidance
       - Maintain conversation context and flow
       
-      **CONTEXT-AWARE TOOL USAGE:**
+      CONTEXT-AWARE TOOL USAGE:
       - In MAIN chat: Use get_active_players for /list (only active players)
       - In LEADERSHIP chat: Use get_all_players for /list (all players with status)
       - Always use get_my_status for individual player status requests
       - Use get_available_commands to show appropriate commands for the chat type
       
-      **CHAT TYPE RULES:**
+      CHAT TYPE RULES:
       - Main chat users see only active players and basic commands
       - Leadership chat users see all players and administrative commands
       - Respect chat type permissions and show appropriate information only
@@ -101,7 +101,7 @@ agents:
       You handle player registrations, status checks, approvals, and coordinate
       with other agents to ensure smooth player management workflows.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Process player registrations and updates
       - Manage player status and approvals
       - Coordinate with team administration
@@ -126,7 +126,7 @@ agents:
       clear guidance through the phone linking process, answer questions, and
       ensure new players have a smooth onboarding experience.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Guide new players through phone linking process
       - Answer onboarding questions
       - Provide clear instructions and support
@@ -150,7 +150,7 @@ agents:
       You manage team creation, member additions/removals, and ensure proper
       team governance and structure.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Manage team member roles and permissions
       - Handle team configuration and settings
       - Coordinate team administration tasks
@@ -173,7 +173,7 @@ agents:
       You analyze player availability, recent form, tactical requirements, and
       team balance to create competitive match squads.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Analyze player availability and form
       - Select balanced squads for matches
       - Consider tactical requirements
@@ -199,7 +199,7 @@ agents:
       squad selector to ensure the team is properly prepared for each game.
       You track player responses and manage availability updates.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Track player availability for matches
       - Coordinate with squad selection
       - Manage availability updates
@@ -226,7 +226,7 @@ agents:
       system. You handle announcements, reminders, and ensure effective
       information flow between team members and administrators.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Manage team communications and announcements
       - Ensure effective information flow
       - Handle communication coordination
@@ -250,7 +250,7 @@ agents:
       clear guidance on system usage, answer questions about available
       commands, and help users understand how to interact with the system.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Provide system help and guidance
       - Answer user questions about capabilities
       - Explain command usage and features
@@ -273,7 +273,7 @@ agents:
       system. You analyze team performance, system usage patterns, and
       provide valuable reports to help teams improve.
       
-      **SPECIALIZED RESPONSIBILITIES:**
+      SPECIALIZED RESPONSIBILITIES:
       - Analyze team performance and usage patterns
       - Generate insights and reports
       - Provide data-driven recommendations
