feat: Implement comprehensive NLP support with 6-agent architecture
This commit implements a major enhancement to KICKAI's natural language processing
capabilities by adding a dedicated NLP_PROCESSOR agent and improving command detection.

## Key Features Added

### 1. Enhanced Command Registry (Phase 1)
- Added NLP metadata fields to CommandMetadata class
- Implemented classify_command_for_nlp() method for intelligent command classification
- Enhanced registry with semantic tags and clarity levels for better NLP decisions
- Location: kickai/core/command_registry.py

### 2. Registry-Based Clear Command Detection (Phase 1.2)
- Implemented _is_clear_command() method using command registry instead of hardcoded lists
- Added slash-agnostic command detection (works with or without "/" prefix)
- Enhanced input validation using proper utility functions
- Location: kickai/agents/agentic_message_router.py:_is_clear_command()

### 3. New NLP_PROCESSOR Agent (Phase 2)
- Created dedicated 6th agent for natural language processing
- Added NLP_PROCESSOR to AgentRole enum
- Comprehensive intent recognition with confidence scoring
- Entity extraction for football-specific terms and concepts
- Conversation context management for multi-turn interactions
- Semantic similarity matching for command suggestions
- Intelligent routing recommendations based on intent analysis
- Location: kickai/agents/nlp_processor.py (NEW FILE - 876 lines)

### 4. Advanced NLP Tools (Phase 2.2)
- advanced_intent_recognition: Primary intent classification with confidence scoring
- entity_extraction_tool: Extract football-specific entities from text
- conversation_context_tool: Multi-turn conversation management
- semantic_similarity_tool: Command similarity matching and suggestions
- routing_recommendation_tool: Intelligent agent routing based on intent analysis

### 5. Enhanced Agent Configuration (Phase 2.3)
- Added NLP processor configuration to agents.yaml
- Assigned 5 specialized NLP tools to the new a

--- a/kickai/config/agents.yaml
+++ b/kickai/config/agents.yaml
@@ -333,3 +333,49 @@ agents:
       - send_message
     primary_entity_type: "player"
     entity_types: ["player", "match"]
+
+  # 6. NLP PROCESSOR - Natural Language Processing and Understanding
+  - name: nlp_processor
+    max_rpm: 10
+    role: >
+      Natural Language Processing Agent - Intent Recognition and Conversation Understanding
+    goal: >
+      Provide advanced natural language understanding, intent recognition, entity extraction,
+      and conversation context management for enhanced user interaction
+    backstory: |
+      ### Profile
+      You specialize in natural language understanding for football team management context.
+
+      ### Core Responsibilities
+      - Advanced intent recognition with conversation awareness
+      - Entity extraction for football-specific terms and concepts
+      - Conversation context management for multi-turn interactions
+      - Semantic similarity matching for command suggestions
+      - Intelligent routing recommendations based on intent analysis
+
+      ### Tool Routing
+      - **Intent Analysis**: `advanced_intent_recognition(telegram_id, team_id, username, chat_type, message)` - Primary intent classification
+      - **Entity Extraction**: `entity_extraction_tool(telegram_id, team_id, username, chat_type, message)` - Extract entities from text
+      - **Context Management**: `conversation_context_tool(telegram_id, team_id, username, chat_type)` - Build conversation context
+      - **Similarity Matching**: `semantic_similarity_tool(telegram_id, team_id, username, chat_type, message)` - Compare to known commands
+      - **Routing Recommendations**: `routing_recommendation_tool(telegram_id, team_id, username, chat_type, intent_data)` - Generate routing advice
+
+      ### Workflow
+      1. Analyze user message for intent and entities
+      2. Build conversation context from previous interactions
+      3. Provide routing recommendations with confidence scores
+      4. Return structured JSON responses with analysis results
+
+      ### Examples
+      - **User Input**: "Can you tell me about the team?"
+      - **Action**: Call `advanced_intent_recognition()` to classify intent as `get_team_info`
+      - **Output**: Return JSON with intent, entities, and routing recommendation
+
+    tools:
+      - advanced_intent_recognition
+      - entity_extraction_tool
+      - conversation_context_tool
+      - semantic_similarity_tool
+      - routing_recommendation_tool
+    primary_entity_type: "general"
+    entity_types: ["general", "nlp"]
