--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ setuptools==69.0.3
 wheel==0.42.0
 
 # AI dependencies
-crewai==0.157.0
+crewai==0.159.0
 
 # Additional dependencies for compatibility
 psutil==6.1.0
+nest-asyncio==1.6.0
 
