feat: implement approve system and automatic status activation
- Add approve_user tool for both players and team members
- Add get_pending_users tool to list pending approvals
- Register approve tools in tool registry and team_administrator agent
- Implement automatic status activation when users join chats:
  - Team members automatically activated when joining leadership chat
  - Players automatically activated when joining main chat
- Update chat role assignment service to use real TeamMemberService
- Fix newline display in mock Telegram UI
- Support both player IDs (e.g., 01DN) and team member IDs (e.g., M01BH)

--- a/kickai/config/agents.yaml
+++ b/kickai/config/agents.yaml
@@ -180,6 +180,9 @@ agents:
       # Team administration
       - create_team
       - add_player
+      # Approval tools
+      - approve_user
+      - get_pending_users
       # Team member update tools (specialized for team member records)
       - update_team_member_field
       - update_team_member_multiple_fields
